<resources>
    <string name="app_name">IMDbApp v2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Editar Usuario</string>

    <string name="menu_home">Top 10</string>
    <string name="menu_gallery">Favoritas</string>
    <string name="menu_slideshow">Buscar Película</string>
    <string name="sign_google">Sign in with Google</string>

    <string name="default_web_client_id">63826498706-7qusk4q6kvddfme4pih80dvmuahogdh4.apps.googleusercontent.com</string>
    <string name="logout">Cerrar sesión</string>
    <string name="send_SMS">Enviar por SMS</string>

    <string name="search">Buscar</string>
    <string name="released_date">Estreno: </string>
    <string name="rating">Rating: </string>

    <string name="year">Año </string>
    <string name="genre">Genero </string>
    <string name="share">Compartir </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_saving_favorites">Error al guardar en favoritos</string>
    <string name="start_session_to_save_as_favorite">Debes iniciar sesión para añadir favoritos</string>
    <string name="save_as_favorite"> añadida a favoritos</string>
    <string name="permission_requested"> Permiso de contactos requerido</string>
    <string name="sms_permission_denied">Permiso de SMS denegado</string>
    <string name="session_closed">Sesión cerrada</string>
    <string name="no_data_available">No hay datos disponibles.</string>
    <string name="choose_gerne">Selecciona un género</string>
    <string name="year_not_available">El año debe estar entre 1888 y  </string>
    <string name="year_too_long">Ocurrió un error al procesar el año.</string>
    <string name="invalid_genre">Por favor, selecciona un género válido</string>
    <string name="bt_permission_granted">Permiso de Bluetooth concedido</string>
    <string name="bt_permission_denied">Permiso de Bluetooth denegado</string>
    <string name="no_favorite_movies">No hay películas para mostrar</string>
    <string name="error_json">Error al generar JSON</string>


    <string name="close">Cerrar </string>
    <string name="favorite_movies_json_title">Películas Favoritas en JSON</string>


    <string name="facebook_app_id">638504268729748</string>
    <string name="fb_login_protocol_scheme">fb638504268729748</string>

    <string name="name">Nombre </string>
    <string name="email">Email </string>
    <string name="address">Dirección </string>
    <string name="chooseadrress">Seleccionar dirección </string>
    <string name="phone">Teléfono </string>
    <string name="choose_img">Seleccionar Imagen</string>
    <string name="save">Guardar </string>
    <string name="confirm_address">Confirmar Dirección </string>
    <string name="empty">Vacio </string>

</resources>